@@ -517,6 +517,11 @@ pre-generated this file, and on this ground the given file is removed
 after integration. Note also that the changes contained in the patch file
 must already be applied on the tree and that the files modified by the
 patch must not have supplementary unrecorded changes.
+
+If the patch generation detects modified binary files, they will be
+automatically added to \fBdebian/source/include\-binaries\fP so that
+they end up in the debian tarball (exactly like \fBdpkg-source
+\-\-include\-binaries \-b\fP would do).
 .PP
 .B Build options
 .TP
