@@ -8,6 +8,9 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   * When dpkg-source regenerates the automatic patch (with formats "2.0"
     or "3.0 (quilt)") it will keep the current patch header to avoid
     losing changes made by the maintainer.
+  * Modify dpkg-source --commit to auto-whitelist modified binary files.
+    That way the same command can be used whatever kind of upstream files
+    has been modified.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
